--- a/cursosalura/Front-end/HTML e CSS - Praticando/alura-plus/styles.css
+++ b/cursosalura/Front-end/HTML e CSS - Praticando/alura-plus/styles.css
@@ -39,4 +39,6 @@ body{
     background-color: transparent;
     border: 2px solid var(--branco-principal);
 }
-
+.container__aviso{
+    color:blueviolet;
+}
